--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -16,7 +16,7 @@
             var user = "{{ user.email }}" || null;
             var token = "{{ csrf_token }}";
             var urls = {
-                login: "TODO",
+                login: "{% url 'persona_login' %}",
                 logout: "TODO",
             };
             Superlists.Accounts.initialize(navigator, user, token, urls);
@@ -29,7 +29,12 @@
     
     <nav class="navbar navbar-default" role="navigation">
         <a class="navbar-brand" href="/">Superlists</a>
-        <a class="btn navbar-right" id="id_login" href="#">로그인</a>
+        {% if user.email %}
+            <a class="btn navbar-btn navbar-right" id="id_logout" href="#">로그아웃</a>
+            <span class="navbar-text navbar-right">로그인됨 {{ user.email }}</span>
+        {% else %}
+            <a class="btn navbar-btn navbar-right" id="id_login" href="#">로그인</a>
+        {% endif %}
     </nav>
 
     <div class="row">
